vendor/zerocopy-derive/tests/ui-nightly/union.stderr
error: unsupported on types with type parameters
  --> tests/ui-nightly/union.rs:35:10
   |
35 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must be #[repr(C)], #[repr(packed)], or #[repr(transparent)]
  --> tests/ui-nightly/union.rs:51:10
   |
51 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must be #[repr(C)], #[repr(packed)], or #[repr(transparent)]
  --> tests/ui-nightly/union.rs:58:10
   |
58 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive `Unaligned` on type with alignment greater than 1
  --> tests/ui-nightly/union.rs:71:11
   |
71 | #[repr(C, align(2))]
   |           ^^^^^^^^

error: this conflicts with another representation hint
  --> tests/ui-nightly/union.rs:88:8
   |
88 | #[repr(packed, align(2))]
   |        ^^^^^^^^^^^^^^^^

error: this conflicts with another representation hint
  --> tests/ui-nightly/union.rs:95:8
   |
95 | #[repr(align(1), align(2))]
   |        ^^^^^^^^^^^^^^^^^^

error: this conflicts with another representation hint
   --> tests/ui-nightly/union.rs:102:8
    |
102 | #[repr(align(2), align(4))]
    |        ^^^^^^^^^^^^^^^^^^

error: must have #[repr(C)], #[repr(transparent)], or #[repr(packed)] attribute in order to guarantee this type's alignment
   --> tests/ui-nightly/union.rs:107:10
    |
107 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)], #[repr(transparent)], or #[repr(packed)] attribute in order to guarantee this type's alignment
   --> tests/ui-nightly/union.rs:114:10
    |
114 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition name: `zerocopy_derive_union_into_bytes`
  --> tests/ui-nightly/union.rs:42:10
   |
42 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = help: expected names are: `docsrs`, `feature`, and `test` and 31 more
   = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `IntoBytes` crate for guidance on how handle this unexpected cfg
   = help: the derive macro `IntoBytes` may come from an old version of the `zerocopy_derive` crate, try updating your dependency with `cargo update -p zerocopy_derive`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `UnsafeCell<()>: zerocopy_renamed::Immutable` is not satisfied
  --> tests/ui-nightly/union.rs:25:10
   |
25 | #[derive(Immutable)]
   |          ^^^^^^^^^ the trait `zerocopy_renamed::Immutable` is not implemented for `UnsafeCell<()>`
   |
   = note: Consider adding `#[derive(Immutable)]` to `UnsafeCell<()>`
   = help: the following other types implement trait `zerocopy_renamed::Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
   = note: required for `ManuallyDrop<UnsafeCell<()>>` to implement `zerocopy_renamed::Immutable`
   = help: see issue #48214
   = note: this error originates in the derive macro `Immutable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
 9 + #![feature(trivial_bounds)]
   |

error[E0277]: `IntoBytes2` has 1 total byte(s) of padding
  --> tests/ui-nightly/union.rs:42:10
   |
42 | #[derive(IntoBytes)]
   |          ^^^^^^^^^ types with padding cannot implement `IntoBytes`
   |
   = note: consider using `zerocopy::Unalign` to lower the alignment of individual fields
   = note: consider adding explicit fields where padding would be
   = note: consider using `#[repr(packed)]` to remove padding
help: the trait `PaddingFree<IntoBytes2, 1>` is not implemented for `()`
      but trait `PaddingFree<IntoBytes2, 0>` is implemented for it
  --> $WORKSPACE/src/util/macro_util.rs
   |
   | impl<T: ?Sized> PaddingFree<T, 0> for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
 9 + #![feature(trivial_bounds)]
   |

error[E0587]: type has conflicting packed and align representation hints
  --> tests/ui-nightly/union.rs:89:1
   |
89 | union Unaligned3 {
   | ^^^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
   --> tests/ui-nightly/union.rs:117:1
    |
117 | union Unaligned7 {
    | ^^^^^^^^^^^^^^^^
    |
note: `AU16` has a `#[repr(align)]` attribute
   --> tests/ui-nightly/../include.rs
    |
 64 |     pub struct AU16(pub u16);
    |     ^^^^^^^^^^^^^^^
